samples/_failures_safe/1761621735_8c565d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f45c3a9.c: In function ‘main’:
./samples/SAFE/__tmp_0f45c3a9.c:115:9: error: expected declaration or statement at end of input
  115 |         unsigned int byte;
      |         ^~~~~~~~
./samples/SAFE/__tmp_0f45c3a9.c:115:9: error: expected declaration or statement at end of input
